creates basic layout of user page

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -45,6 +45,9 @@
     <script type="text/javascript">
       $(document).ready(function() {
         $('select').material_select();
+        $(".button-collapse").sideNav({
+          menuWidth: 200,
+        });
       });
     </script>    
     
