--- a/server/index.html
+++ b/server/index.html
@@ -26,6 +26,7 @@
       $(".button-collapse").sideNav({
         menuWidth: 200,
       });
+      $('ul.tabs').tabs();
     });
   </script>
   <script type="text/javascript" src="/js/bundle.js"></script>
