--- a/server/index.html
+++ b/server/index.html
@@ -1,5 +1,4 @@
 <html>
-
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta charset="utf-8">
@@ -27,6 +26,7 @@
         menuWidth: 200,
       });
       $('ul.tabs').tabs();
+      $('.modal').modal();
     });
   </script>
   <script type="text/javascript" src="/js/bundle.js"></script>
